force-app/main/default/objects/KimbleOne__OutboundInterfaceRequest__c/KimbleOne__OutboundInterfaceRequest__c.object-meta.xml
<CustomObject>
    <label>Outbound Interface Request</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Outbound Interface Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Interface Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>