force-app/main/default/objects/KimbleOne__OutboundInterfaceRequest__c/fields/KimbleOne__Event__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Initiating Event</label>
    <referenceTo>KimbleOne__Event__c</referenceTo>
    <relationshipLabel>Outbound Interface Requests</relationshipLabel>
    <relationshipName>OutboundInterfaceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>