force-app/main/default/objects/KimbleOne__OutboundInterfaceRequest__c/fields/KimbleOne__OutboundInterfaceRun__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__OutboundInterfaceRun__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Export</label>
    <referenceTo>KimbleOne__OutboundInterfaceRun__c</referenceTo>
    <relationshipLabel>Outbound Interface Requests</relationshipLabel>
    <relationshipName>OutboundInterfaceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>